Prevent keyword tooltips from breaking across lines and add spacing

--- a/src/styles/40k-10e.less
+++ b/src/styles/40k-10e.less
@@ -4041,6 +4041,8 @@
     text-transform: capitalize;
     color: black;
     font-weight: 600;
+    white-space: nowrap;
+    margin: 0 0.2em;
 
     .rule-button {
       font-size: inherit;
@@ -4073,6 +4075,8 @@
     font-weight: 600;
     z-index: 2;
     cursor: pointer;
+    white-space: nowrap;
+    margin: 0 0.2em;
 
     padding-left: 2px;
     padding-right: 2px;
